<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="activity_projectclasses_code">PC</string>
    <string name="database" translatable="false">Database</string>
    <string name="popupmenu" translatable="false">popupmenu</string>
    <string name="ignore" translatable="false">ignore</string>
    <string name="ok" translatable="false">OK</string>
    <string name="about">About</string>
	<string name="help" translatable="false">Help</string>
    <string name="backup">Backup</string>
    <string name="button">Button</string>
	<string name="restore">Restore</string>
    <string name="reorg">Reorganize</string>
    <string name="storelastquery">Save last filequery</string>
    <string name="refreshgps">Refresh GPS</string>
    <string name="refreshface">Refresh Face recognition</string>
    <string name="refresh">Refresh</string>
    <string name="sampledb">Create sample database</string>
    <string name="sample">Sample</string>
    <string name="update">Update</string>
	<string name="changelog_title">Changes</string>
    <string name="menu_settings">Settings</string>
    <string name="first_screen">Home screen</string>
    <string name="smartcopyactivity">smart copy activity</string>
    <string name="translatetext">Translate text</string>
    <string name="scanimage">Scan image</string>
    <string name="scanqr">Scan QR/bar-code</string>
    <string name="dots" translatable="false">…</string>
    <string name="openapp">Open file</string>
    <string name="openappwith">Open file with …</string>
    <string name="pick_image_chooser_title">Select source</string>
    <string name="pick_image_camera">Camera</string>
    <string name="pick_image_gallery">Galery</string>
    <string name="scantext">Scan text</string>
    <string name="right">Right</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="browse">Tonen</string>
    <string name="mail">Mail</string>
    <string name="print" translatable="false">Print</string>
    <string name="whatsapp" translatable="false">WHatsApp</string>
    <string name="translate">Translate</string>
    <string name="translated">Translated</string>
    <string name="text">Text</string>
    <string name="type">Type</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="add">Add</string>
    <string name="addfile">Add file</string>
    <string name="file">File</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="search_or_select_item">Search/Select Item</string>
    <string name="select_item">Select Item</string>
    <string name="done">Done</string>
    <string name="spinner">Spinner</string>

    <string name="others" translatable="false">Others</string>
    <string name="newTag" translatable="false">New!</string>
    <string name="loading" translatable="false">Loading</string>
    
    <string name="latest" translatable="false">Recent</string>
    <string name="picker" translatable="false">Picker</string>
    
    <string name="lt_grey" translatable="false">#CCCCCC</string>
    <string name="red" translatable="false">Red</string>
    <string name="pink" translatable="false">Pink</string>
    <string name="purple" translatable="false">Purple</string>
    <string name="deep_purple" translatable="false">Deep purple</string>
    <string name="indigo" translatable="false">Indigo</string>
    <string name="blue" translatable="false">Blue</string>
    <string name="light_blue" translatable="false">Light blue</string>
    <string name="cyan" translatable="false">Cyan</string>
    <string name="teal" translatable="false">Teal</string>
    <string name="green" translatable="false">Green</string>
    <string name="light_green" translatable="false">Light green</string>
    <string name="lime" translatable="false">Lime</string>
    <string name="yellow" translatable="false">Yellow</string>
    <string name="amber" translatable="false">Amber</string>
    <string name="orange" translatable="false">Orange</string>
    <string name="deep_orange" translatable="false">Deep orange</string>
    <string name="brown" translatable="false">Brown</string>
    <string name="grey" translatable="false">Grey</string>
    <string name="language">Language</string>

    <string name="cancel_button_label">Cancel</string>
    <string name="choose_button_label">Select</string>
    <string name="label_parent_directory">Parent Directory</string>
    <string name="last_edit">Last edited: </string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="label_parent_dir" translatable="false">...</string>

</resources>

