<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
        <LinearLayout
            android:id="@+id/viewMain2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default">
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="1,3" >
                <TableRow tools:ignore="UselessParent">
                    <com.farrusco.projectclasses.widget.ButtonExt
                        android:id="@+id/btnSave2"
                        android:theme="@style/Project.ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/normal_40sp"
                        android:text="@string/save"
                        android:textAlignment="center"
                        android:layout_span="2"/>

                    <com.farrusco.projectclasses.widget.ButtonExt
                        android:id="@+id/btnTranslate2"
                        android:theme="@style/Project.ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/normal_40sp"
                        android:text="@string/translate"
                        android:textAlignment="center"
                        android:layout_span="2" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowtranslate2"
                    tools:ignore="UselessParent">

                    <com.farrusco.projectclasses.widget.TextViewExt
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/from"
                        android:theme="@style/Project.TextViewStyle"
                        android:textColor="@color/black"/>

                    <com.farrusco.projectclasses.widget.SpinnerExt
                        android:id="@+id/sp_translatefrom2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="@dimen/margin_default"
                        style="@style/SpinnerStyle"/>

                    <com.farrusco.projectclasses.widget.TextViewExt
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/to"
                        android:theme="@style/Project.TextViewStyle"
                        android:textColor="@color/black"/>

                    <com.farrusco.projectclasses.widget.SpinnerExt
                        android:id="@+id/sp_translateto2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="@dimen/margin_default"
                        style="@style/SpinnerStyle"/>

                </TableRow>

            </TableLayout>

            <com.farrusco.projectclasses.widget.TextViewExt
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text"
                android:theme="@style/Project.TextViewStyle"
                android:textColor="@color/black" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">
            <com.farrusco.projectclasses.widget.EditTextExt
                android:id="@+id/txtOms2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:theme="@style/Project.EditTextStyle.Ultra"
                app:validate="empty"  />

    </ScrollView>
    </LinearLayout>
</FrameLayout>