<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >
    <ImageView
        android:importantForAccessibility="no"
        android:id="@+id/backBtn"
        android:theme="@style/Project.TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/margin_default"
        app:srcCompat="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/saveBtn"
        android:theme="@style/Project.TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/margin_default"
        android:text="@string/save"
        android:textColor="@color/Orange"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backBtn"
        />

    <TextView
        android:id="@+id/scanBtn"
        android:theme="@style/Project.TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/margin_default"
        android:text="@string/scantext"
        android:textColor="@color/Orange"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="@+id/saveBtn"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/translateBtn"
        android:theme="@style/Project.TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/margin_default"
        android:text="@string/scantext"
        android:textColor="@color/Orange"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="@+id/saveBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rotateText"
        android:theme="@style/Project.TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default"
        android:gravity="center"
        android:textIsSelectable="false"
        android:textColor="@color/white"
        tools:text="@string/right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveBtn"
        />

    <com.farrusco.projectclasses.graphics.cropper.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/normal_2sp"
        android:layout_marginTop="@dimen/normal_1sp"
        android:layout_marginEnd="@dimen/normal_2sp"
        android:layout_marginBottom="@dimen/normal_2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rotateText" />

    <Spinner
        android:id="@+id/sp_translate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/rotateText"/>

    <com.farrusco.projectclasses.widget.EditTextExt
        android:id="@+id/txtScan"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:theme="@style/Project.EditTextStyle.Ultra"
        android:visibility="gone"
        android:textAlignment="textStart"
        android:inputType="textMultiLine"
        android:layout_marginStart="@dimen/normal_2sp"
        android:layout_marginTop="@dimen/normal_1sp"
        android:layout_marginEnd="@dimen/normal_2sp"
        android:layout_marginBottom="@dimen/normal_2sp"
        app:validate="empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveBtn"  />

</androidx.constraintlayout.widget.ConstraintLayout>



