<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewMain"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <include layout="@layout/line_separator_2sp"/>
    <TableLayout
        android:id="@+id/tblLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            tools:ignore="UselessParent">
            <com.farrusco.projectclasses.widget.TextViewExt
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/language"
                android:gravity="center_vertical"
                android:theme="@style/Project.TextViewStyle"
                android:tag="@string/ignore"
                android:textColor="@color/white"/>

            <com.farrusco.projectclasses.widget.SpinnerExt
                android:id="@+id/sp_translatefrom"
                style="@style/SpinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>
    </TableLayout>


    <include layout="@layout/line_separator_2sp"/>

    <com.farrusco.projectclasses.widget.EditTextExt
        android:id="@+id/txtOms1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Project.EditTextStyle.Ultra"
        app:validate="empty" />

            <include layout="@layout/line_separator_2sp"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2">

        <TableRow tools:ignore="UselessParent" >

            <com.farrusco.projectclasses.widget.TextViewExt
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clipboard"
                android:theme="@style/Project.TextViewStyle"
                android:tag="@string/ignore"
                android:textColor="@color/white" />
            <com.farrusco.projectclasses.widget.TextViewExt
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/translate"
                android:gravity="center"
                android:theme="@style/Project.TextViewStyle"
                android:tag="@string/ignore"
                android:textColor="@color/white"
                android:layout_span="2"/>
            <com.farrusco.projectclasses.widget.TextViewExt
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clipboard"
                android:theme="@style/Project.TextViewStyle"
                android:tag="@string/ignore"
                android:textColor="@color/white"/>
        </TableRow>

        <TableRow
            tools:ignore="UselessParent">
            <com.farrusco.projectclasses.widget.ButtonExt
                android:id="@+id/imagecopy_up"
                android:layout_width="@dimen/normal_60sp"
                android:layout_height="@dimen/normal_60sp"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:contentDescription="@string/button"
                android:background="@drawable/clipboard_copy_up"/>

            <ImageView
                android:id="@+id/image_arrow_down"
                android:src="@android:drawable/arrow_down_float"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_width="@dimen/normal_60sp"
                android:layout_height="@dimen/normal_60sp"
                android:tooltipText="@string/translate"
                android:clickable="false"
                android:longClickable="true"
                tools:ignore="ContentDescription">
            </ImageView>
            <ImageView
                android:id="@+id/image_arrow_up"
                android:src="@android:drawable/arrow_up_float"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_width="@dimen/normal_60sp"
                android:layout_height="@dimen/normal_60sp"
                android:tooltipText="@string/translate"
                android:clickable="false"
                android:longClickable="true"
                tools:ignore="ContentDescription">
            </ImageView>

            <com.farrusco.projectclasses.widget.ButtonExt
                android:id="@+id/imagecopy_down"
                android:layout_width="@dimen/normal_60sp"
                android:layout_height="@dimen/normal_60sp"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:contentDescription="@string/button"
                android:background="@drawable/clipboard_copy_down"/>
        </TableRow>
    </TableLayout>

            <include layout="@layout/line_separator_2sp"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

            <TableRow
                tools:ignore="UselessParent">
            <com.farrusco.projectclasses.widget.TextViewExt
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/language"
                android:gravity="center_vertical"
                android:theme="@style/Project.TextViewStyle"
                android:tag="@string/ignore"
                android:textColor="@color/white" />
        <com.farrusco.projectclasses.widget.SpinnerExt
            android:id="@+id/sp_translateto"
            style="@style/SpinnerStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        </TableRow>
    </TableLayout>
    <include layout="@layout/line_separator_2sp"/>
    <com.farrusco.projectclasses.widget.EditTextExt
        android:id="@+id/txtOms2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Project.EditTextStyle.Ultra"
        app:validate="empty" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>